<?xml version="1.0"?>
<package format="2">

  <name>mrs_vins_mono_estimator_plugin</name>
  <version>1.0.0</version>
  <description>MRS vins_mono state estimator plugin</description>

  <maintainer email="petrlmat@fel.cvut.cz">Matej Petrlik</maintainer>
  <author>Matej Petrlik</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>mrs_uav_managers</depend>
  <depend>mrs_uav_state_estimators</depend>

  <export>
    <mrs_uav_managers plugin="${prefix}/estimator_plugins.xml" />
  </export>

</package>
